examples/test/testpolicy9238.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9238
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key25: value34
      key28: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value44
          key25: value25
          key49: value12
      podSelector:
        matchLabels:
          key11: value13
